// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepository should call login API for OTP and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should call login API for email and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should call otp API for fetch 1`] = `
Object {
  "otp_sent": true,
}
`;

exports[`UserRepository should call otp API for verify 1`] = `
Object {
  "otp_verify": true,
}
`;

exports[`UserRepository should call socialLogin and return for no user 1`] = `
Object {
  "is_new_user": false,
}
`;

exports[`UserRepository should call socialLogin and return response 1`] = `
User {
  "_accessToken": "access_token",
  "_countryCode": "IN",
  "_email": "r@gmail.com",
  "_fullName": "Rishabh Modi",
  "_id": 0,
  "_phoneNumber": "99999999",
  "_refreshToken": "refresh_token",
}
`;

exports[`UserRepository should check if email exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should check if phone exists 1`] = `
Object {
  "is_exists": true,
}
`;

exports[`UserRepository should get user subscription 1`] = `
UserSubscription {
  "_recommendedPlan": SubscribedPlan {
    "_id": 2,
    "_label": "HomzHub Elite",
    "_name": "HOMZHUB_ELITE",
    "_serviceBundleItems": Array [
      ServiceBundleItems {
        "_category": "Professional Service",
        "_description": "Lorem Ipsum Dummy Text.",
        "_id": 3,
        "_itemLabel": "Valid for 30 days",
        "_name": "WEBSITE_LISTING",
        "_position": 1,
        "_title": "Website Listing",
      },
      ServiceBundleItems {
        "_category": "Professional Service",
        "_description": "Lorem Ipsum Dummy Text.",
        "_id": 5,
        "_itemLabel": "",
        "_name": "SOCIAL_MEDIA",
        "_position": 2,
        "_title": "Social Media",
      },
      ServiceBundleItems {
        "_category": "Professional Service",
        "_description": "Lorem Ipsum Dummy Text.",
        "_id": 8,
        "_itemLabel": "",
        "_name": "EMAIL",
        "_position": 3,
        "_title": "Email",
      },
    ],
  },
  "_userServicePlan": SubscribedPlan {
    "_id": 1,
    "_label": "HomzHub Pro",
    "_name": "HOMZHUB_PRO",
    "_serviceBundleItems": Array [
      ServiceBundleItems {
        "_category": "Professional Service",
        "_description": "Lorem Ipsum Dummy Text.",
        "_id": 1,
        "_itemLabel": "Valid for 30 days",
        "_name": "WEBSITE_LISTING",
        "_position": 1,
        "_title": "Website Listing",
      },
      ServiceBundleItems {
        "_category": "Professional Service",
        "_description": "Lorem Ipsum Dummy Text.",
        "_id": 9,
        "_itemLabel": "Option to boost",
        "_name": "DIGITAL_ADVERTISEMENTS",
        "_position": 2,
        "_title": "Digital Advertisements",
      },
    ],
  },
}
`;

exports[`UserRepository should logout 1`] = `undefined`;
